# deployment-automation

./: .envrc  .gitignore  README.md  devenv.nix  devenv.yaml
ami-example/: README.md  aws-nixos.pkr.hcl  aws-ubuntu.pkr.hcl
borgbackup-example/: README.md  home.nix
dns-example/: Pulumi.staging.yaml  README.md  TODO.md  main.py
linux-nixify-example/: README.md  nixify.sh
private-cloud-example/: README.md
private-keygen-example/: Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  requirements.txt
private-keygen-example/sdks/smallstep/: pyproject.toml
private-keygen-example/sdks/smallstep/pulumi_smallstep/: README.md  __init__.py  _inputs.py  _utilities.py  account.py  attestation_authority.py  authority.py  collection.py  collection_instance.py  device_collection.py  device_collection_account.py  get_account.py  get_attestation_authority.py  get_authority.py  get_collection.py  get_collection_instance.py  get_device_collection_account.py  get_provisioner.py  get_provisioner_webhook.py  outputs.py  provider.py  provisioner.py  provisioner_webhook.py  pulumi-plugin.json  workload.py
private-keygen-example/sdks/smallstep/pulumi_smallstep/config/: __init__.pyi  outputs.py  vars.py
web-example/: Pulumi.dev-tomans.yaml  Pulumi.tomans-dev.yaml  Pulumi.yaml  README.md  main.py
web-example/www/: index.html
