[project]
  name = "pulumi_smallstep"
  description = "A Pulumi provider dynamically bridged from smallstep."
  dependencies = ["parver>=0.2.1", "pulumi>=3.134.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11; python_version < \"3.11\""]
  readme = "README.md"
  requires-python = ">=3.8"
  version = "0.5.1"
  [project.urls]
    Repository = "https://github.com/smallstep/terraform-provider-smallstep"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_smallstep = ["py.typed", "pulumi-plugin.json"]
